[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme/button_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/InventoryItem/InventoryItem.gd" type="Script" id=2]

[node name="InventoryItem" type="Control"]
margin_right = 260.0
margin_bottom = 28.0
rect_min_size = Vector2( 280, 28 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 280, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StockNameLabel" type="Label" parent="HBoxContainer"]
margin_top = 7.0
margin_right = 140.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Stock Name"
clip_text = true

[node name="StockQuanityLabel" type="Label" parent="HBoxContainer"]
margin_left = 144.0
margin_top = 7.0
margin_right = 212.0
margin_bottom = 21.0
rect_min_size = Vector2( 68, 0 )
text = "0.00 Kg/L"
align = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 216.0
margin_right = 280.0
margin_bottom = 28.0
rect_min_size = Vector2( 64, 28 )
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 4
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
visible = false
margin_left = 4.0
margin_right = 64.0
margin_bottom = 28.0

[node name="SubtractButton" type="Button" parent="HBoxContainer/MarginContainer/ButtonContainer"]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 0 )
custom_fonts/font = ExtResource( 1 )
text = "-"

[node name="AddButton" type="Button" parent="HBoxContainer/MarginContainer/ButtonContainer"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 0 )
custom_fonts/font = ExtResource( 1 )
text = "+"
